--- a/src/Sections/Navbar/Navbar.css
+++ b/src/Sections/Navbar/Navbar.css
@@ -13,3 +13,9 @@
   padding-left: 0px !important;
   padding-right: 0px !important;
 }
+
+.MuiBox-root.css-xuolum {
+  justify-content: end;
+  display: flex;
+  align-items: center;
+}
